fix: Profile image seems squished

--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -117,6 +117,7 @@ header#mdm--header {
     font-weight: 700;
     img {
       @include size();
+      object-fit: cover;
       border-radius: 100%;
     }
   }
